--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ sourceCompatibility = 11
 targetCompatibility = 11
 
 dependencies {
+    compile 'com.jfoenix:jfoenix:9.0.10'
     implementation 'org.openjfx:javafx-controls:15.0.1'
     implementation 'org.openjfx:javafx-fxml:15.0.1'
     implementation 'org.dizitart:nitrite:3.4.3'
