--- a/build.gradle
+++ b/build.gradle
@@ -28,14 +28,15 @@ sourceCompatibility = 11
 targetCompatibility = 11
 
 dependencies {
+
     implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
-    implementation 'com.jfoenix:jfoenix:9.0.10'
-    testImplementation "org.testfx:testfx-core:4.0.16-alpha"
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.5.1'
-    testImplementation "org.testfx:testfx-junit5:4.0.16-alpha"
-    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.13.2'
-    testImplementation group: 'commons-io', name: 'commons-io', version:'2.8.0'
+    compile 'com.jfoenix:jfoenix:9.0.10'
+    testCompile "org.testfx:testfx-core:4.0.16-alpha"
+    testCompile 'org.junit.jupiter:junit-jupiter-api:5.5.1'
+    testCompile 'org.junit.jupiter:junit-jupiter-engine:5.5.1'
+    testCompile "org.testfx:testfx-junit5:4.0.16-alpha"
+    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.13.2'
+    testCompile group: 'commons-io', name: 'commons-io', version:'2.8.0'
     implementation 'org.openjfx:javafx-controls:15.0.1'
     implementation 'org.openjfx:javafx-fxml:15.0.1'
     implementation 'org.dizitart:nitrite:3.4.3'
