--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'maven-publish'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.8'
+    //id "org.roboscratch.robot" version "0.1.3"
 }
 
 javafx {
@@ -41,6 +42,7 @@ dependencies {
     implementation 'org.openjfx:javafx-fxml:15.0.1'
     implementation 'org.dizitart:nitrite:3.4.3'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.1'
+    //classpath "gradle.plugin.org.roboscratch.gradle:gradle-robot:0.1.3"
 }
 
 
